--- a/README.Rmd
+++ b/README.Rmd
@@ -8,6 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 This Readme will be updated whenever `Readme.Rmd` or `test.csv` is changed. To see Eli's presentation go [HERE](https://htmlpreview.github.io/?https://github.com/nmfs-openscapes/12-07-21-GitHub-Actions/blob/main/Intro.html) or to the `Intro.Rmd` file.
+[Click here to see the meeting notes](https://github.com/nmfs-openscapes/12-07-21-GitHub-Actions/blob/main/meeting_notes.md)
 
 ## A table of data
 
